# llm_from_scratch

./: README.md  config_dataclasses.py  pyproject.toml
benchmark/: benchmark.py  benchmark_inference.py
benchmark/vllm/: benchmark_vllm_serving.py
config/: config.yaml  model_config.py
config/memory/optimizer/: low-memory-optimizer-config.yaml
config/triton/: rms-enabled-config.yaml
example/llama/: load_hf.py  load_hf_direct_rope.py
llm-basics/cs336_basics/: model.py
llm-basics/llm_basics.egg-info/: PKG-INFO  SOURCES.txt
llm_basics/: pyproject.toml
llm_basics/cs336_basics/: layer.py  model.py  model_patch.py  model_triton.py  nn_utils.py  test_patch.py
llm_basics/cs336_basics/model/: base.py  llama3.py
llm_basics/llm_basics.egg-info/: SOURCES.txt
ops/: cross_entropy.py  dropout.py  rms_norm.py  softmax.py  test_cross_entropy.py  test_softmax.py
parallelism/: README.md  parallel_config.py  tensor_pp.py
parallelism/dp/: README_profiling.md  benchmark_ddp.py  bucket.py  ddp_gradient_averaging_explained.md  dp_naive.py  test_dp.py  toy_model.py
parallelism/tensor_parallelism/: autograd_functions.py  mlp.py  tensor_pp.py
parallelism/tensor_parallelism/test/: tp_test.py
parallelism/tp/: autograd_functions.py  mlp.py
parallelism/tp/test/: embedding_test.py  linear_test.py  parallel_embedding_test.py  tp_test.py
spec_decoding/: spec_decode.py  spec_decode_test.py
